fixed collections list height centered empty collections message stretching collections witdh on low resolution

--- a/frontend/src/components/collections/collectionItem.components.scss
+++ b/frontend/src/components/collections/collectionItem.components.scss
@@ -49,7 +49,7 @@
 @media screen and (max-width: 700px) {
   .collection {
     margin-left: 0;
-    width: 290px;
+    width: 90vw;
     height: 55px;
     margin-bottom: 15px;
     padding: 10px;
