--- a/frontend/src/components/collections/collections.components.scss
+++ b/frontend/src/components/collections/collections.components.scss
@@ -1,5 +1,9 @@
 @import "../../config.scss";
 
+.collectionsComponent_empty {
+  height: 100%;
+}
+
 .addCollection__plusIcon_little {
   display: none;
 }
@@ -11,8 +15,14 @@
   height: 100%;
 }
 
+.collectionsContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
 .collectionsList {
-  height: 80vh;
+  height: fit-content;
   width: 625px;
   margin-top: 35px;
   max-height: 676px;
@@ -95,19 +105,13 @@
   background-color: $Main_Blue;
 }
 
-// @media screen and (max-height: 830px) {
-//   .collectionsList {
-//     height: 550px;
-//   }
-// }
-
 @media screen and (max-width: 1200px) {
   .addCollection__circle_outserquare {
     margin-right: 15px;
   }
 
   .collectionsList {
-    height: 70vh;
+    height: fit-content;
     width: 605px;
     display: flex;
     flex-direction: column;
@@ -119,7 +123,6 @@
     display: flex;
     flex-direction: column;
     align-self: start;
-    // justify-content: center;
   }
 
   .addCollection {
@@ -154,10 +157,14 @@
     height: auto;
   }
 
+  .collectionsComponent_empty {
+    height: 100%;
+  }
+
   .collectionsList {
     margin-top: 25px;
     height: 100%;
-    width: 300px;
+    width: 91vw;
     display: flex;
     flex-direction: column;
     align-items: center;
