--- a/frontend/src/components/collections/withoutCollections.components.scss
+++ b/frontend/src/components/collections/withoutCollections.components.scss
@@ -18,6 +18,7 @@
 }
 
 .noCollectionsMessage__link {
+  text-decoration: none;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
